--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.opencsv:opencsv:4.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 }
