set lotto icon and and theme styling

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/lotto_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
-        <activity android:name=".activities.winnings.WinningsActivity" />
+        <activity android:name=".activities.winnings.WinningsActivity"
+            android:theme="@style/RiseUp"/>
         <activity android:name=".activities.main.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
